--- a/package.json
+++ b/package.json
@@ -62,6 +62,8 @@
     "ts-jest": "^29.1.1",
     "ts-node-dev": "^2.0.0",
     "tsconfig-paths": "^4.2.0",
-    "typescript": "^5.1.6"
+    "ttypescript": "^1.5.15",
+    "typescript": "^5.1.6",
+    "typescript-transform-paths": "^3.5.5"
   }
 }
