--- a/package.json
+++ b/package.json
@@ -61,9 +61,8 @@
     "jest": "^29.6.1",
     "ts-jest": "^29.1.1",
     "ts-node-dev": "^2.0.0",
+    "tsc-alias": "^1.8.16",
     "tsconfig-paths": "^4.2.0",
-    "ttypescript": "^1.5.15",
-    "typescript": "^5.1.6",
-    "typescript-transform-paths": "^3.5.5"
+    "typescript": "^5.1.6"
   }
 }
