configuracion inicial para el proyecto

--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "description": "Node.js microservice compatible with Laravel Passport authentication",
   "main": "dist/index.js",
   "scripts": {
-    "dev": "ts-node -r tsconfig-paths/register src/index.ts",
-    "start": "node -r tsconfig-paths/register dist/index.js",
-    "build": "tsc && tsc-alias",
+  
+    "build": "tsc",
+    "start": "node dist/index.js",
+    "dev": "ts-node src/index.ts",
     "test": "jest",
     "lint": "eslint src/**/*.ts",
     "lint:fix": "eslint src/**/*.ts --fix"
