--- a/package.json
+++ b/package.json
@@ -3,14 +3,22 @@
   "version": "1.0.0",
   "description": "Node.js microservice compatible with Laravel Passport authentication",
   "main": "dist/index.js",
-  "scripts": {
-  
+   "scripts": {
     "build": "tsc",
     "start": "node dist/index.js",
     "dev": "ts-node src/index.ts",
-    "test": "jest",
-    "lint": "eslint src/**/*.ts",
-    "lint:fix": "eslint src/**/*.ts --fix"
+    "setup:oauth": "ts-node setup-oauth-client.ts", 
+    "typeorm": "ts-node -r tsconfig-paths/register ./node_modules/typeorm/cli",
+    "migration:generate": "npm run typeorm -- migration:generate src/migrations/InitSchema -d src/config/database.ts",
+    "migration:run": "npm run typeorm -- migration:run -d src/config/database.ts",
+    "migration:revert": "npm run typeorm -- migration:revert -d src/config/database.ts",
+    "deploy": "npm run build && git add dist/ && git commit -m 'Build for deployment' && git push",
+
+    "seed": "ts-node src/seeders/PropertySeeder.ts",
+    "seed:properties": "ts-node src/seeders/PropertySeeder.ts",
+    "schema:drop": "npm run typeorm -- schema:drop -d src/config/database.ts",
+    "reset-db": "npm run schema:drop && npm run migration:run && npm run seed",
+    "fresh-start": "npm run reset-db && npm run dev"
   },
   "keywords": [
     "nodejs",
