--- a/package.json
+++ b/package.json
@@ -3,19 +3,26 @@
   "version": "1.0.0",
   "description": "Node.js microservice compatible with Laravel Passport authentication",
   "main": "dist/index.js",
-   "scripts": {
+  "scripts": {
     "build": "tsc",
     "start": "node dist/index.js",
     "dev": "ts-node src/index.ts",
-    "setup:oauth": "ts-node setup-oauth-client.ts", 
+    "setup:oauth": "ts-node setup-oauth-client.ts",
     "typeorm": "ts-node -r tsconfig-paths/register ./node_modules/typeorm/cli",
     "migration:generate": "npm run typeorm -- migration:generate src/migrations/InitSchema -d src/config/database.ts",
     "migration:run": "npm run typeorm -- migration:run -d src/config/database.ts",
     "migration:revert": "npm run typeorm -- migration:revert -d src/config/database.ts",
     "deploy": "npm run build && git add dist/ && git commit -m 'Build for deployment' && git push",
-
-    "seed": "ts-node src/seeders/PropertySeeder.ts",
+    "seed": "ts-node src/scripts/runSeeders.ts",
     "seed:properties": "ts-node src/seeders/PropertySeeder.ts",
+    "seed:all": "ts-node src/scripts/runSeeders.ts all",
+    "seed:essential": "ts-node src/scripts/runSeeders.ts essential",
+    "seed:admin": "ts-node src/scripts/runSeeders.ts admin",
+    "seed:roles": "ts-node src/scripts/runSeeders.ts roles",
+    "seed:catalogs": "ts-node src/scripts/runSeeders.ts catalogs",
+    "seed:oauth": "ts-node src/scripts/runSeeders.ts oauth",
+    "seed:demo": "ts-node src/scripts/runSeeders.ts demo",
+    "seed:help": "ts-node src/scripts/runSeeders.ts help",
     "schema:drop": "npm run typeorm -- schema:drop -d src/config/database.ts",
     "reset-db": "npm run schema:drop && npm run migration:run && npm run seed",
     "fresh-start": "npm run reset-db && npm run dev"
@@ -39,6 +46,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-rate-limit": "^6.8.1",
+    "express-validator": "^7.2.1",
     "helmet": "^7.0.0",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
@@ -57,6 +65,7 @@
     "@types/compression": "^1.7.2",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
+    "@types/express-validator": "^3.0.2",
     "@types/jest": "^29.5.3",
     "@types/jsonwebtoken": "^9.0.2",
     "@types/morgan": "^1.9.4",
