--- a/package.json
+++ b/package.json
@@ -47,6 +47,8 @@
     "express": "^4.18.2",
     "express-rate-limit": "^6.8.1",
     "express-validator": "^7.2.1",
+    "google-auth-library": "^10.5.0",
+    "googleapis": "^164.1.0",
     "helmet": "^7.0.0",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
