--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -1,5 +1,3 @@
-version: '3.9'
-
 services:
   db:
     image: postgres:15
@@ -13,6 +11,9 @@ services:
 
   node-app:
     build: .
+    restart: always
+    env_file:
+      - .env
     environment:
       NODE_ENV: production
     depends_on:
