--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "mysql2": "^3.6.0",
     "nodemailer": "^6.10.1",
     "pg": "^8.11.3",
+    "qrcode": "^1.5.4",
     "redis": "^4.6.7",
     "reflect-metadata": "^0.1.13",
     "swagger-jsdoc": "^6.2.8",
@@ -73,6 +74,7 @@
     "@types/morgan": "^1.9.4",
     "@types/node": "^20.4.5",
     "@types/nodemailer": "^6.4.18",
+    "@types/qrcode": "^1.5.6",
     "@types/swagger-jsdoc": "^6.0.4",
     "@types/swagger-ui-express": "^4.1.8",
     "@typescript-eslint/eslint-plugin": "^6.2.0",
