--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -1,5 +1,3 @@
-version: '3.9'
-
 services:
   db:
     image: postgres:15
@@ -14,7 +12,9 @@ services:
       - pgdata:/var/lib/postgresql/data
 
   node-app:
-    build: .
+    build:
+      context: .
+      dockerfile: Dockerfile.dev
     environment:
       NODE_ENV: development
     depends_on:
@@ -23,7 +23,8 @@ services:
       - "3000:3000"
     volumes:
       - .:/usr/src/app
-    command: sh -c "npm install && npm run dev"
+      - /usr/src/app/node_modules
+    command: npm run dev
 
 volumes:
   pgdata:
