--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
     "mysql2": "^3.6.0",
+    "tsconfig-paths": "^4.2.0",
     "nodemailer": "^6.10.1",
     "pg": "^8.11.3",
     "qrcode": "^1.5.4",
